--- a/misc/planering.html
+++ b/misc/planering.html
@@ -17,6 +17,10 @@
         th {
             border: 1px solid black
         }
+
+    img{
+        max-width: 40%;;
+    }
     </style>
 
 </head>
@@ -26,15 +30,31 @@
     <h1>Dokumentation projekt Vt</h1>
 
     <h2>1. Idébeskrivning</h2>
+   <p>Jag ska göra en hemssida som är en hyllning till min vän grupp. Vi kallar oss Flac så det är lite konceptet som hemsidan bygger på. Hemsidan ska bestå av 5 sidor, första sidan är en hyllning till hela gruppen, här finns bilder och historier. 
+       Sedan finns en sida var för varje person, här finns såväl bilder som historier och "kärleks förklaringar". 
+       
+       Jag har en otroligt liten målgrupp där jag endast riktar mig mot dem i min vänskapsgrupp.
+       Min lilla målgrupp gör det dock väldigt enkelt att anpassa min hemsida, min design och mina funktioner efter målgruppen och vad den behöver. Jag har väl medveten om att det i verkligheten är lika enkelt att anpassa inför 
+       målgruppen, och i fakistiska projekt med större målgrupp behövs längre tid på att utredda vilka behov målgruppen har. Eftersom att jag tillhör min målgrupp samt känner de andra såpass bra, så vet jag mycket väl hur jag ska anpassa 
+       den för målgruppen. Mina andra vänner är också tonårstjejer som alla går på gymmnasiet, vi bor alla i ett område som heter åkered och vi kommer alla från samma skolor. Vi är alla hyfsat tekniska och använder oss av datorer och mobiler dagligen. 
+       Min målgrupp har ett mycket gemensamt förflutett och även samma tekniska kännedommar. Jag kan därför anpassa hemsida mycket efter vårt förflutna och behöver heller inte anpassa hemsida för att en teknisk nybörjare ska kunna använda den. 
+
+       Min förra sida jag utvecklade var endast anpassad för mobil, denna gång ska jag även utveckla den för datorn. Den var dessutom inte jätte utarbetad pågrund av den kortare arbets tiden. Denna gången ska jag lägga krut på detaljer och se till att 
+       hemsida kommer samman till en fin helhet. Mitt största misstag förra gången var att ha olika css för varje sida, denna gången ska jag se till att ha en css för alla sidorna. 
+   </p>
     <!-- Vad ska du göra? Vilken är din målgrupp? Om du utvecklar en tidigare sida; Vad ska du förändra/utveckla? -->
 
     <h2>2. Planering</h2>
 
     <h3>2.1 Handskiss</h3>
     <!-- Här lägger du en bild på din handskiss av layouten. Viktigt att du beskriver vilka boxelement som ska användas. Visa även hur du tänker med ditt grid (Hur många kolumner?) -->
-
+    <img src="../img/skiss1.jpg">
+    <img src="../img/skiss2.jpg">
+    <img src="../img/skiss3.jpg">
+    <img src="../img/skiss4.jpg">
     <h3>2.2 Schema</h3>
     <!-- Vad ska du göra när? Inte för detaljerat. -->
+
 
     <table>
         <tr>
@@ -46,38 +66,40 @@
         <tr>
             <td>4</td>
             <td>
-                Planerar och skissar
+                <p>Första lektionen så skalla jag utforma en ide och koncept. Detta för att sedan utforma en skiss </p>
                 <!-- Vad görs på lektionen vecka 4? -->
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 4? -->
+                Tiden utaför lektionerna ska jag främst ägna åt att slutföra det som inte blev klart på lektionerna. Denna gången blir det högst troligen att jag fäder ställer skisserna.
             </td>
         </tr>
 
         <tr>
             <td>5</td>
             <td>
-                <!-- Vad görs på lektionen vecka 5? -->
+                <!-- Vad görs på lektionen vecka 5? --> Denna lektionen skrivs ide beskrvningen och planerningen. Möjligtvis att jag börjar på html. 
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 5? -->
+                <!-- Vad görs utanför lektionen vecka 5? --> 
             </td>
         </tr>
 
         <tr>
             <td>6</td>
             <td>
-                <!-- Vad görs på lektionen vecka 6? -->
+                <!-- Vad görs på lektionen vecka 6? --> Denna lektionen skall själva skelletet för hemsida utformas. Så att jag har stommen för allt. Detta så att jag sedan bara kan infoga bilder text samt arbeta
+                på det estetiska.
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 6? -->
+                <!-- Vad görs utanför lektionen vecka 6? --> Om stommen inte är klar ska detta göras utanför.
             </td>
         </tr>
 
         <tr>
             <td>7</td>
             <td>
-                <!-- Vad görs på lektionen vecka 7? -->
+                <!-- Vad görs på lektionen vecka 7? --> Denna veckan har vi lov.
             </td>
             <td>
                 <!-- Vad görs utanför lektionen vecka 7? -->
@@ -87,50 +109,50 @@
         <tr>
             <td>8</td>
             <td>
-                <!-- Vad görs på lektionen vecka 8? -->
+                <!-- Vad görs på lektionen vecka 8? --> Denna veckan ska infogandet av bilder och text starta. Designen ska börja ta form. 
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 8? -->
+                <!-- Vad görs utanför lektionen vecka 8? --> Ytterliga arbet på designen.
             </td>
         </tr>
 
         <tr>
             <td>9</td>
             <td>
-                <!-- Vad görs på lektionen vecka 9? -->
+                <!-- Vad görs på lektionen vecka 9? --> Denna lektioen ska första sidan helt färdigställas. Designen, texter och bilder ska vara helt klart.
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 9? -->
+                <!-- Vad görs utanför lektionen vecka 9? -->Färdigställa arbete som inte blivit klart på lektionen 
             </td>
         </tr>
 
         <tr>
             <td>10</td>
             <td>
-                <!-- Vad görs på lektionen vecka 10? -->
+                <!-- Vad görs på lektionen vecka 10? -->Skriva html för Annie. Denna lektionen ska sidanm för Annie färdigställas. 
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 10? -->
+                <!-- Vad görs utanför lektionen vecka 10? -->Färdigställa arbete som inte blivit klart på lektionen.
             </td>
         </tr>
 
         <tr>
             <td>11</td>
             <td>
-                <!-- Vad görs på lektionen vecka 11? -->
+                <!-- Vad görs på lektionen vecka 11? --> Skriva html för Frida. Denna lektionen ska sidan för Frida färdigställas.
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 11? -->
+                <!-- Vad görs utanför lektionen vecka 11? -->Färdigställ arbetet som inte blivit klart på lektionen.
             </td>
         </tr>
 
         <tr>
             <td>12</td>
             <td>
-                <!-- Vad görs på lektionen vecka 12? -->
+                <!-- Vad görs på lektionen vecka 12? -->Skriva html sidan för lovisa. Denna lektionen ska sidan för Lovisa färdigställas. 
             </td>
             <td>
-                <!-- Vad görs utanför lektionen vecka 12? -->
+                <!-- Vad görs utanför lektionen vecka 12? -->Färdigställa arbete som inte blivit klart på lektionen.
             </td>
         </tr>
 
@@ -142,32 +164,38 @@
 
     <h3>Lektion vecka 4</h3>
     <!-- Fyll på med dokumentation här. -->
+    <p>Denna lektionen började jag skisa på mina ider och trog fram ett koncept.</p>
 
     <h3>Lektion vecka 5</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. --> Denna gången gjorde jag idebeskrivningen och planeringen. 
 
     <h3>Lektion vecka 6</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. -->Denna lektionen börjdae jag på skellet till hemsidan.
 
     <h3>Lektion vecka 8</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. -->Denna gången slutförde jag skellet till hemsidan, samt började infoga bilder och texter. Samt att jag arbetade i photoshop för att skapa symboler till hemsidan.
 
     <h3>Lektion vecka 9</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. -->Denna gången färdigställde i och pricip hela jag första siden, det enda jag har kvar är att fylla i alla texter. 
 
     <h3>Lektion vecka 10</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. --> Denna gången startade jag på lovisa sidan, jag möte många problem och svårigheter. Efter mycket klurande hoppade jag istället över till att skapa skalet för de andra sidorna.
 
     <h3>Lektion vecka 11</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. -->Denna lektionen lyckades jag färdigställa Lovisa sidan(förutom texterna). Förra gången hade jag svårigehetern med bilderna och att få dem att fylla griden. Detta lyckades jag 
+    lösa denna gången. Jag såg sedan till att förfina min kod, efter detta startade jag på Annie sidan. 
 
     <h3>Lektion vecka 12</h3>
-    <!-- Fyll på med dokumentation här. -->
+    <!-- Fyll på med dokumentation här. --> Denna lektionen och sen förra lektion, har jag färdigställt alla mina sidor, detta genom att bland annat lägga till en slide show. Lägga till texter samt att löst en hel del små problem som strulat.
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? Hur ser resultatet ut på en riktig telefon? -->
 
     <h2>5. Utvärdering</h2>
+    Under projeketet mötet jag många motgångara,speciellt när det kommer till bilder och få dem att bete sig som jag vill, speciellt i förhållande till andra bilder. 
+    <br>Något som där emot gick väldigt bra och som jag tyckte jag gjorde bra var skellet av min sida.Jag började nämligen med att gör ett skellet och sedan fylla det med inhåll. Så som bilder, text, headers och länkar. 
+    <br>Sen tycker jag dessutom att jag inte fastnade för länge på något problem, märkde jag att jag inte kom någon vart så gick jag vidare och kom tillbaka till det problem senare, ofta när jag senare kom tillbaka hade jag mer kunskap eller lärt mig nått som jag kunde använda mig för att lösa problemet.
+    <br> 
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
