--- a/misc/planering.html
+++ b/misc/planering.html
@@ -194,7 +194,8 @@
     <h2>5. Utvärdering</h2>
     Under projeketet mötet jag många motgångara,speciellt när det kommer till bilder och få dem att bete sig som jag vill, speciellt i förhållande till andra bilder. 
     <br>Något som där emot gick väldigt bra och som jag tyckte jag gjorde bra var skellet av min sida.Jag började nämligen med att gör ett skellet och sedan fylla det med inhåll. Så som bilder, text, headers och länkar. 
-    <br>Sen tycker jag dessutom att jag inte fastnade för länge på något problem, märkde jag att jag inte kom någon vart så gick jag vidare och kom tillbaka till det problem senare, ofta när jag senare kom tillbaka hade jag mer kunskap eller lärt mig nått som jag kunde använda mig för att lösa problemet.
+    <br>Sen tycker jag dessutom att jag inte fastnade för länge på något problem, märkde jag att jag inte kom någon vart så gick jag vidare och kom tillbaka till det problem senare. Ofta när jag senare kom tillbaka hade jag mer kunskap eller lärt mig nått som jag kunde använda mig för att lösa problemet.
+    
     <br> 
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
