--- a/misc/planering.html
+++ b/misc/planering.html
@@ -176,7 +176,7 @@
     <!-- Fyll på med dokumentation här. -->Denna gången slutförde jag skellet till hemsidan, samt började infoga bilder och texter. Samt att jag arbetade i photoshop för att skapa symboler till hemsidan.
 
     <h3>Lektion vecka 9</h3>
-    <!-- Fyll på med dokumentation här. -->Denna gången färdigställde i och pricip hela jag första siden, det enda jag har kvar är att fylla i alla texter. 
+    <!-- Fyll på med dokumentation här. -->Denna gången färdigställde i och pricip hela första siden, det enda jag har kvar är att fylla i alla texter. 
 
     <h3>Lektion vecka 10</h3>
     <!-- Fyll på med dokumentation här. --> Denna gången startade jag på lovisa sidan, jag möte många problem och svårigheter. Efter mycket klurande hoppade jag istället över till att skapa skalet för de andra sidorna.
@@ -190,13 +190,22 @@
 
     <h2>4. Testning</h2>
     <!-- Testa i Chrome + Firefox eller Safari (på både dator och mobil). Skiljer sig resultatet? Har du behövt anpassa ditt kod/innehåll efter de olika webbläsarna? Hur gick valideringen? Vad säger contrastchecker.com om text/bakgrundsfärg? Hur ser resultatet ut på en riktig telefon? -->
-
+Jag hade stora problem när det kom till testningen. Jag lyckades testa den i Firefox samt Chrome och här de identiska och fina ut. Problem uppstod när jag skulle testa den i safari, både på mobilen och på min andra dator. Jag lcykades nämligen inte att få min 
+live server att funka, trorts massa hjälp från andra. Därför har jag tyvärr inte testat för mobilen, vilket jag hade önskat. 
+<br>
+<br> 
+Valederinge gick i det stora hela bra, mesta del av felen var att den ville att jag skulle ha en h1 på mina articals, samt att den var iriterad frö att jag ej syntolkat med alt. Bland alla varningar om att jag missat alt och att jag glömt h1 så fanns det några andra fel. Många svår tolkade, ofta handlade de om positionen, men dem jag faktikst kunde urskilja var sådana där jag glömt 
+mellanrum, vilket gick enkelt att fixa.
+<br>
+<br>
+Mina kontraster på hemsidan var bra och all text gick enkelt att läsa. Det enda hemsidam hade problem med var en loga, men en loga är inget visentligt och därför bortsåg jag från det.  
     <h2>5. Utvärdering</h2>
     Under projeketet mötet jag många motgångara,speciellt när det kommer till bilder och få dem att bete sig som jag vill, speciellt i förhållande till andra bilder. 
     <br>Något som där emot gick väldigt bra och som jag tyckte jag gjorde bra var skellet av min sida.Jag började nämligen med att gör ett skellet och sedan fylla det med inhåll. Så som bilder, text, headers och länkar. 
     <br>Sen tycker jag dessutom att jag inte fastnade för länge på något problem, märkde jag att jag inte kom någon vart så gick jag vidare och kom tillbaka till det problem senare. Ofta när jag senare kom tillbaka hade jag mer kunskap eller lärt mig nått som jag kunde använda mig för att lösa problemet.
-    
-    <br> 
+    <br> En sak som defenitivt skulle påskyndat processen hade varit om jag inan jag började coda och speciellt inan jag la in bilder, skulle jag lagt mer tid på att kolla upp de bästa metoderna.
+    <br> Hade jag haft mer tid hade jag definitiv förbättrat det estetiska, möjligtvis lägga till mer och komplexa funktioner, så som videos mm. Men åt andra sidan så tycker jag att jag ändå fick in mycket på den tiden vi hade. 
+    <br> Hade Jag haft mer tid skulle jag även se till att få mer variation mellan mina sidor, upplägget är iprincip det samma på alla sidor, med endast en liten variation. Även om variationen är liten ledde det dock till en rad olika utmaningar.  
     <!-- Ex: Vad gick bra/mindre bra? (i arbetet/din förmåga).
     Nyanserat: "hur hade det blivit om jag istället hade...?"
     Konkreta förbättringsförslag i produkt + process. -->
