--- a/cajsa.html
+++ b/cajsa.html
@@ -34,6 +34,7 @@
           <div class="minaSlides fade">
             <img src="img/headerpink.png" class="gallery" style="width:100%">
           </div>
+        </div>
 </body>
     
 <script>
