--- a/frida.html
+++ b/frida.html
@@ -36,7 +36,7 @@
           <div class="minaSlides fade">
             <img src="img/headerpink.png" class="gallery" style="width:100%">
           </div>
-  
+        </div>
   </body>
       
   <script>
