--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="minaSlides fade">
             <img src="img/headerpink.png" class="gallery" style="width:100%">
           </div>
-  
+        </div>
   </body>
       
   <script>
