--- a/frida.html
+++ b/frida.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav><a href="lovisa.html"><img src="img/lovisa.png"></a><a href="Annie.html"><img src="img/Annie.png"></a><a href="Frida.html"><img src="img/Frida.png"></a> <a href="Cajsa.html"><img src="img/Cajsa.png"></a><a href="index.html"><img src="img/icon.png" class="icon"></a></nav>
+     <nav><a href="lovisa.html"><img src="img/lovisa.png"></a><a href="annie.html"><img src="img/annie.png"></a><a href="frida.html"><img src="img/frida.png"></a> <a href="cajsa.html"><img src="img/cajsa.png"></a><a href="index.html"><img src="img/icon.png" class="icon"></a></nav>
      <div class="slideshow-container"> 
     
       <div class="minaSlides fade">
@@ -28,7 +28,7 @@
     <article class="Frida"><h1>Frida</h1><p> Du är så otroligt empatisk mot alla och skulle inte göra en fluga färnär och vist så säger man om många, men du skulle verkligen inte gör en fluga färnär. Jag tror inte jag träffat någon så empatisk. Du lägger alltid andra före dig själv! My vegan homie! </p></article>
     <article class="karamell"><p>En smällkaramell i männsklig form, underbar, sprallig, knasig, vacker och färglad. Så många olika underbara sidor. Härligaste, galnaste vrål skrattet som smitar av sig och får hela rummet att skratta. <br><br> "Hon är nästan bättre än mig på Franska" - Matthew. <br> <br> "Hon har fin klädstil" - Elias  <br>  <br> Och det har du verkligen, min thrift queen! </p></article>
     <article class="puss"><img src="img/puss.JPG" class="gallery"> </article>
-    <article class="döskalle"><img src="img/döskalle.JPG" class="gallery"></article>
+    <article class="doskalle"><img src="img/döskalle.JPG" class="gallery"></article>
     <article class="gym"><img src="img/gym.JPG" class="gallery"> </article>
     <article class="cute"><img src="img/cute.JPG" class="gallery"> </article>
     <article class="kalas"><img src= "img/kalas.JPG" class="gallery"></article>
