--- a/lovisa.html
+++ b/lovisa.html
@@ -30,7 +30,7 @@
     <article class="utslagen"><img src="img/utslagen.JPG" class="gallery"> </article>
     <article class="energi"> <p><br> "Hon har bra energi" - Felix <br> <br>Yeees girl you aura is on pont, som självaste solen</p></article>
     <article class="inspo"><p>Du är en sån inpseration för mig, din stil, din personlighet, hela duu!! Iprincip så behöver jag ingen pinterst, ingen nayva, ingen insta för jag har dig. Något stort väntar definitit på dig i framtiden. </p></article>
-    <article class="grön"><img src="img/grön.JPG" class="gallery"> </article>
+    <article class="gron"><img src="img/grön.JPG" class="gallery"> </article>
     <article class="avokado"><img src= "img/avokado.JPG" class="gallery"></article>
     <article class="skidor"><img src="img/skidor.JPG" class="gallery"></article>
     <footer><a href="misc/planering.html"><img src="img/icon.png"></a></footer>
