--- a/Annie.html
+++ b/Annie.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow&display=swap" rel="stylesheet">
 </head>
 <body>
+	<!-- kommentar -->
     <nav><a href="lovisa.html"><img src="img/lovisa.png"></a><a href="annie.html"><img src="img/annie.png"></a><a href="frida.html"><img src="img/frida.png"></a> <a href="cajsa.html"><img src="img/cajsa.png"></a><a href="index.html"><img src="img/icon.png" class="icon"></a></nav>
     <div class="slideshow-container"> 
     
