--- a/Annie.html
+++ b/Annie.html
@@ -17,7 +17,7 @@
         </div>
       
         <div class="minaSlides fade">
-          <img src="img/headerRed.png" class="gallery" style="width:100%">
+          <img src="img/headerred.png" class="gallery" style="width:100%">
         </div>
       
         <div class="minaSlides fade">
