--- a/cajsa.html
+++ b/cajsa.html
@@ -17,7 +17,7 @@
         </div>
       
         <div class="minaSlides fade">
-          <img src="img/headerRed.png" class="gallery" style="width:100%" >
+          <img src="img/headerred.png" class="gallery" style="width:100%" >
         </div>
       
         <div class="minaSlides fade">
@@ -25,7 +25,7 @@
         </div>
       </div>
     <article class="Er"><h1>Cajsa</h1><p><br>Psajk, kommer inte handla om mig. Även om, även jag är uderbart fantastisk, hahha, så är även denna sidan dedikerad till er. Hallå!! Titta på alla finna bilder på oss/er! Hur glad blir man inte? Hoppas verkligen ni minns alla dessa unerbar stunder. Underbara härliga öland, och när vi vann bästa film, inte för att skryta eller nått ;)</p></article>
-    <article class="solnedgang"><img src="img/solnedgång.png" class="gallery"></article>
+    <article class="solnedgang"><img src="img/solnedgang.png" class="gallery"></article>
     <article class="rampen"><img src="img/rampen.JPG" class="gallery"> </article>
     <article class="facetime"><img src="img/facetime.JPG" class="gallery"> </article>
     <article class="pizza"><img src="img/pizza.JPG" class="gallery"> </article>
