--- a/lovisa.html
+++ b/lovisa.html
@@ -17,13 +17,14 @@
         </div>
       
         <div class="minaSlides fade">
-          <img src="img/headerRed.png" class="gallery" style="width:100%">
+          <img src="img/headerred.png" class="gallery" style="width:100%">
         </div>
       
         <div class="minaSlides fade">
           <img src="img/headerpink.png" class="gallery" style="width:100%">
         </div>
       </div>
+    <article class="skidor"><img src="img/skidor.JPG" class="gallery"></article>
     <article class="vacker"><img src="img/vacker.JPG" class="gallery"></article>
     <article class="gladje"><h1>Lovisa</h1><p>Så sprudland, så otroligt snäll och världens glädjespridare. Även om du är på dåligt humör så låter du det aldrig gå ut över andra. Under dina dåliga dagar ser du alltid till att endast sprida glädje. </p></article>
     <article class="glad"><img src="img/glad.JPG" class="gallery" ></article>
